--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
 .App {
   text-align: center;
+  background-color: #212529;
+  height: 100vh;
+  padding: 100px 0 0 30px;
 }
-
+label {
+  color: white;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
