--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   background-color: #212529;
   height: 100vh;
-  padding: 100px 0 0 30px;
+  padding: 100px 30px 0 30px;
 }
 label {
   color: white;
